--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,9 @@
     z-index: 999;
     object-fit:cover;
   }
+
+  @media screen and (max-width:768px) {
+    .latest-image:hover{
+        transform: none;
+    }
+  }
