--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,85 @@ body{
     transition: 1s all ease;
   }
 
+
+  .accordion{
+    width: 100%;
+  
+    justify-content: center;
+    height: 693px;
+    gap: 10px;
+    transition: 0.3s;
+  }
+  .accordion:hover{
+    gap: 4px;
+  }
+  .accordion h2{
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 45px;
+    border-bottom: 1px solid #fff;
+    white-space: nowrap;
+  }
+  .accordion li{
+    position: relative;
+    overflow: hidden;
+    flex: 0 0 260px;
+    cursor: pointer;
+  }
+  .accordion li img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+  .accordion li,
+  .accordion li img,
+  .accordion li .content,
+  .accordion li .content span {
+    transition: 0.5s;
+  }
+  .accordion li .content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    color: #fff;
+    padding: 15px;
+    background: #02022e;
+    background: linear-gradient(0deg, rgb(0 0 0 / 70%) 10%, rgb(255 255 255 / 0%) 100%);
+    opacity: 0;
+    visibility: hidden;
+  }
+  .accordion li
+  .content span{
+    position: absolute;
+    z-index: 3;
+    left: 40%;
+    bottom: 50px;
+    translate: -300px 0;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .accordion li:hover{
+    flex: 0 0 450px;
+    scale: 1;
+    z-index: 10;
+    opacity: 1;
+  }
+  .accordion li:hover
+  .content {
+    opacity: 1;
+    visibility: visible;
+  }
+  .accordion li:hover span{
+    translate: -50% 0;
+    opacity: 1;
+    visibility: visible;
+  }
+
+
