--- a/src/index.css
+++ b/src/index.css
@@ -89,8 +89,9 @@ body{
     transition: 1s all ease;
   }
 
+  
 
-  .accordion{
+  /* .accordion{
     width: 100%;
   
     justify-content: center;
@@ -169,5 +170,24 @@ body{
     opacity: 1;
     visibility: visible;
   }
+
+  .gallery-wrap{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 90vh;
+  }
+  .item{
+    flex: 1;
+    height: 100%;
+    
+    transition: all 2s ease;
+  }
+  .item:hover{
+    flex: 2;
+  } */
+
+
+  
 
 
