--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,29 @@ body{
   mask-image: linear-gradient(to right, transparent 10%, black 100%);
 }
 
+.workImage{
+  -webkit-mask-image: linear-gradient(to top, transparent 1%, black 30%);
+  mask-image: linear-gradient(to top, transparent 1%, black 30%);
+}
+
+.slide-in{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  transform-origin: top;
+}
+.slide-out{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  transform-origin: bottom;
+}
   /* .accordion{
     width: 100%;
   
